Fix section gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -254,7 +254,7 @@
   .section {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 20px;
+    gap: 20px 10px;
   }
 
   .section-what .content-list {
